# GLaDOS-2023

./: .cz.json  .gitignore  .hie.yaml  CHANGELOG.md  GLaDOS2023.cabal  Makefile  README.md  cabal.project  d  execution.md  glados.tix  hie.yaml  sun-tzu_lnk  test.cmp  test.scm
.github/workflows/: haskell.yml  main.yml  pre-release.yml
IntegrationTestFolder/TestFiles/: division.scm  if1.scm  simple_mod.scm  simple_mul.scm
IntegrationTestFolder/TestFilesSolved/: error.scm
IntegrationTests/: factorial.scm  lambda1.scm.slv  sample1.scm  simple_mod.scm
TestFiles/: 1  2  builtins1.scm  builtins2.scm  builtins3.scm  factorial.scm  function1.scm  hello_world.scm  if3.scm  lambda1.scm  sample1.scm  sample2.scm
TestFolder/TestFiles/: call.scm  error.scm  superior.scm
app/: Builtins.hs  Exec.hs  Main.hs  Parsing.hs
app/Parsing/: Args.hs  Lang.hs
compiler/: Main.hs
doc/: bonuses.md  bonuses_documentation.md  compiled-syntax-description.md  dev-install.md  syntax-description.md
integration-tests/: Test.hs
integration-tests/TestFiles/: builtins3.scm  complex_string.scm  lambda2.scm  simple_div.scm
integrationTests/: Main.hs  Print.hs  Test.hs
integrationTests/TestFiles/: big_mul.scm  big_mul.scm.slv  builtins1.scm  builtins2.scm  builtins3.scm  complex_infix.scm  complex_string.scm.slv  error.scm.slv  factorial.scm  factorial.scm.slv  float_mul.scm  foo.scm  function1.scm  if1.scm  if2.scm  if3.scm  infix_notation_simple.scm  lambda1.scm  lambda3.scm  precedence_infix.scm  simple_div.scm  simple_mod.scm  simple_string.scm  superior.scm
integrationTests/integrationTestFolder/TestFiles/: if2.scm
interactive/: Main.hs  Utils.hs
lib/: Exec.hs  Parsing.hs
lib/Exec/: Builtins.hs  Eval.hs  Function.hs  InteractivePrompt.hs  Lookup.hs  Registry.hs  RuntimeException.hs  Utils.hs  Variables.hs
lib/Parsing/: Args.hs  Ast.hs  Cpt.hs  Infix.hs  Token.hs
libraries/compilation-lib/: FunctionBlock.hs  Instruction.hs  Parsing.hs
libraries/compilation-lib/Compilation/: CompilationError.hs  Compile.hs  Expr.hs  Function.hs  FunctionBlock.hs  Registry.hs  RetVal.hs  Utils.hs
libraries/compilation-lib/Exec/: Utils.hs
libraries/compilation-lib/Parsing/: Ast.hs  Cpt.hs  Infix.hs  Token.hs  TokenType.hs
libraries/exec-lib/: Exec.hs
libraries/exec-lib/Exec/: Builtins.hs  Infer.hs  InferType.hs  Instructions.hs  RuntimeException.hs  Utils.hs
libraries/exec-lib/Parser/: ReadFile.hs
libraries/shared-lib/: FunctionBlock.hs  Instruction.hs  Utils.hs
parsing/Parsing/: Args.hs  Lang.hs
runner/: Main.hs
test/: ArgsTest.hs  ArgsTests.hs  AstTests.hs  CptTests.hs  ExecTests.hs  ParseArgsTest.hs  ParseTests.hs  Parsing.hs  ParsingLangTests.hs  ParsingTests.hs  Test.Parsing.hs  Test.hs  TestMain.hs  TokenTests.hs  TokenizationTest.hs
test/Parse/: ArgsTests.hs  AstTest.hs  CptTests.hs  TokenTests.hs
test/Parsing/: ArgsTests.hs  AstTests.hs  CptTests.hs  Lang.Test.hs  Test.Args.hs  TokenTests.hs
test/Test/: Parsing.hs
test/Test/Parsing/: Args.hs  Lang.hs
tests/integration-tests/: Test.hs
tests/integration-tests/TestFiles/: array_concatenate.scm  array_head.scm  array_init.scm  array_last.scm  array_pushback.scm  array_pushfront.scm  array_tail.scm  builtins2.scm  builtins3.scm  factorial.scm  foo.scm  infix_in_function.scm  lambda3.scm  simple_infix.scm  simple_mul.scm  superior.scm
tests/unit-tests/: CompilationLib.hs  ExecLib.hs  TestMain.hs
tests/unit-tests/CompilationLib/Compilation/: CompilationTests.hs
tests/unit-tests/CompilationLib/Parser/: ArgsTests.hs  AstTests.hs  CptTests.hs  InfixTests.hs  TokenTests.hs
tests/unit-tests/CompilationLib/Parser/Compilation/: CompilationTests.hs
tests/unit-tests/ExecLib/: Exec.hs
tests/unit-tests/ExecLib/Exec/: Infer.hs  Instructions.hs
tests/unit-tests/ExecLib/Parser/: ReadFile.hs
unit-tests/: ExecTests.hs  TestMain.hs
unit-tests/ExecLib/Exec/: Infer.hs  Utils.hs
unit-tests/ExecLib/Parser/: ReadFile.hs
unit-tests/Parsing/: ArgsTests.hs  AstTests.hs  InfixTests.hs  TokenTests.hs
unitTest/: ExecTests.hs  ParsingTests.hs
unitTest/Parsing/: ArgsTests.hs  CptTests.hs  InfixTests.hs  TokenTests.hs
