cabal-version:      2.4
name:               GLaDOS2023
version:            0.1.0.0
-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Nydragon

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

--
-- Compilation
--

library compilation-lib
    default-language: Haskell2010
    build-depends:    base >= 4.14.1.0, containers >= 0.5.10.2
    hs-source-dirs:   libraries/compilation-lib
    exposed-modules:
        Parsing,
        Parsing.Args,
        Parsing.Token,
        Parsing.TokenType,
        Parsing.Ast,
        Parsing.Cpt,
        Parsing.Infix,
        Exec,
        Exec.RuntimeException,
        Exec.Function,
        Exec.Variables
        Exec.Registry,
        Exec.Builtins,
        Exec.InteractivePrompt
        Exec.Eval,
        Exec.Utils

-- Compiler
executable glados
    default-language: Haskell2010
    hs-source-dirs: compiler unit-tests
    build-depends:  base >= 4.14.1.0,
                    compilation-lib,
                    -- Testing deps are here for vscode highlighting purposes
                    tasty >= 1.4.3,
                    tasty-discover >= 5.0.0,
                    tasty-hunit >= 0.10.0.3,
                    containers >= 0.5.10.2
    main-is: Main.hs

--
-- Execution
--

library exec-lib
    default-language: Haskell2010
    hs-source-dirs: libraries/exec-lib
    build-depends: base >= 4.14.1.0

executable runner
    default-language: Haskell2010
    hs-source-dirs: runner
    build-depends: base >= 4.14.1.0, exec-lib
    main-is: Main.hs

--
-- Tests
--

test-suite unit-tests
    default-language: Haskell2010
    hs-source-dirs: unit-tests
    build-depends:  base >=4.14.1.0,
                    tasty >= 1.4.3,
                    tasty-discover >= 5.0.0,
                    tasty-hunit >= 0.10.0.3,
                    containers >=0.5.10.2,
                    compilation-lib
    main-is: TestMain.hs
    type: exitcode-stdio-1.0
    other-modules:
        Parsing.ArgsTests,
        Parsing.TokenTests,
        Parsing.CptTests,
        Parsing.AstTests,
        Parsing.InfixTests,
        ParsingTests,
        ExecTests

test-suite integration-tests
    default-language: Haskell2010
    hs-source-dirs: integration-tests
    build-depends:  base >=4.14.1.0,
                    ansi-terminal >= 0.11.3,
                    process >= 1.6.8.0,
                    filepath >= 1.4.2.1,
                    directory >= 1.3.3.0,
                    exitcode >= 0.1.0.0,
                    compilation-lib
    main-is: Main.hs
    type: exitcode-stdio-1.0
    other-modules:
        Print,
        Test
