cabal-version:      2.4
name:               GLaDOS2023
version:            0.2.0.0
author:             Nydragon

extra-source-files:
    CHANGELOG.md
    README.md

--
-- Compilation
--

library compilation-lib
    default-language: Haskell2010
    build-depends:    base >= 4.14.1.0, containers >= 0.5.10.2, shared-lib
    hs-source-dirs:   libraries/compilation-lib
    ghc-options: -Wall -debug
    exposed-modules:
        Parsing.Args,
        Parsing.Ast,
        Parsing.Cpt,
        Parsing.Infix,
        Parsing.Token,
        Parsing.TokenType,
        Compilation.Utils,
        Compilation.Compile,
        Compilation.CompilationError,
        Compilation.Registry,
        Compilation.RetVal

-- Compiler
executable glados
    default-language: Haskell2010
    hs-source-dirs: compiler unit-tests
    ghc-options: -Wall -debug
    build-depends:  base >= 4.14.1.0,
                    compilation-lib,
                    -- Testing deps are here for vscode highlighting purposes
                    tasty >= 1.4.3,
                    tasty-discover >= 5.0.0,
                    tasty-hunit >= 0.10.0.3,
                    containers >= 0.5.10.2
    main-is: Main.hs

--
-- Execution
--

library exec-lib
    default-language: Haskell2010
    hs-source-dirs: libraries/exec-lib
    build-depends: base >= 4.14.1.0, shared-lib, containers
    ghc-options: -Wall
    exposed-modules:
        Parser.ReadFile,
        Exec.InferType,
        Exec.Builtins,
        Exec.Infer,
        Exec.Instructions,
        Exec.RuntimeException,
        Exec.Utils,
        Exec

executable runner
    default-language: Haskell2010
    hs-source-dirs: runner
    build-depends: base >= 4.14.1.0, exec-lib
    main-is: Main.hs

--
-- Shared
--

library shared-lib
    default-language: Haskell2010
    build-depends:    base >= 4.14.1.0, containers >= 0.5.10.2
    hs-source-dirs:   libraries/shared-lib
    ghc-options: -Wall
    exposed-modules:
        Instruction,
        FunctionBlock,
        Utils

--
-- Interactive
--

executable sun-tzu
    default-language:   Haskell2010
    build-depends:      base >= 4.14.1.0,
                        shared-lib,
                        compilation-lib,
                        exec-lib
    hs-source-dirs:     interactive
    main-is:            Main.hs
    ghc-options:        -Wall
    other-modules:
        Utils

--
-- Tests
--

test-suite unit-tests
    default-language: Haskell2010
    hs-source-dirs: tests/unit-tests
    build-depends:  base >=4.14.1.0,
                    tasty >= 1.4.3,
                    tasty-discover >= 5.0.0,
                    tasty-hunit >= 0.10.0.3,
                    containers >=0.5.10.2,
                    exec-lib,
                    compilation-lib,
                    shared-lib
    main-is: TestMain.hs
    type: exitcode-stdio-1.0
    other-modules:
        CompilationLib.Parser.ArgsTests,
        CompilationLib.Parser.TokenTests,
        CompilationLib.Parser.CptTests,
        CompilationLib.Parser.AstTests,
        CompilationLib.Parser.InfixTests,
        ExecLib.Exec.Infer,
        ExecLib.Exec.Instructions,
        ExecLib.Exec.Utils,
        ExecLib.Parser.ReadFile,
        CompilationLib
        ExecLib

test-suite integration-tests
    default-language: Haskell2010
    hs-source-dirs: tests/integration-tests
    build-depends:  base >=4.14.1.0,
                    ansi-terminal >= 0.11.3,
                    process >= 1.6.8.0,
                    filepath >= 1.4.2.1,
                    directory >= 1.3.3.0,
                    exitcode >= 0.1.0.0,
                    exec-lib,
                    compilation-lib
    main-is: Main.hs
    type: exitcode-stdio-1.0
    other-modules:
        Print,
        Test
